version 2022b, in progress
- delete unused file, addons.txt
- Fix bug: det() should not flag an error when returning NA
- Fix GUI bug: option of showing lagged series not always
  available when it should be

2022-02-02 version 2022a
- Copy/Paste of data in the GUI: make this facility more
  visible, and support gdt format in addition to delimited
  text; support Ctrl-C to copy
- Panel data time dimension: add apparatus to specify this
  via the graphical interface
- Packaged panel data files: add more metadata where wanted
- Add a daily data file to the package: bikesharing.gdt
- Ensure the expected round-trip from strptime to strftime
  for underspecified dates such as "1990"
- "set seed" command: allow parameter "auto" to revert to an
  automatic clock-based seed
- "dpanel" command: add facility to "collapse" instruments
  as in David Roodman's xtabond2
- "kpss" command for panel data: improve output for the case
  where automatic lag order is selected; record $test and
  $pvalue in matrix form
- "markers" command: add a --from-array option to read from
  an array of strings
- "shell" command: clarify the help text
- "genr": get informative error messages to appear in more
  cases
- Kalman (state space) apparatus: revise the documentation
  to use more standard notation; revise internal code for
  better maintainability (could be faster too)
- Indexing into matrices, arrays, lists and strings: support
  the keyword 'end' to denote the last element; in the case
  of matrices this is specific to row or column
- Support direct assignment of array of strings to string-
  valued series, if the array is of appropriate size
- New function interpol() for linear interpolation
- New function mat2list(): create a list of series from the
  columns of a suitable matrix
- New function distance(): evaluate the distance between
  points on various metrics such as Euclidean, Manhattan,
  Hamming, Chebyshev, Cosine and Mahalanobis